config files auto-loaded when docker containers are fired

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,17 @@ services:
     image: roadmap/server
     volumes:
       - ./roadmap:/usr/src/app
+      - ./config/branding.yml:/usr/src/app/config/branding.yml
+      - ./config/database.yml:/usr/src/app/config/database.yml
+      - ./config/secrets.yml:/usr/src/app/config/secrets.yml
+      - ./config/initializers/contact_us.rb:/usr/src/app/config/initializers/contact_us.rb
+      - ./config/initializers/devise.rb:/usr/src/app/config/initializers/devise.rb
+      - ./config/initializers/recaptcha.rb:/usr/src/app/config/initializers/recaptcha.rb
+      - ./config/initializers/wicket_pdf.rb:/usr/src/app/config/initializers/wicket_pdf.rb
     ports:
       - "3000:3000"
     env_file:
-      - ./db.env
+      - ./.env
     depends_on:
       - db
   client:
@@ -28,7 +35,7 @@ services:
     volumes:
       - db_volume:/var/lib/postgresql/data
     env_file:
-      - ./db.env
+      - ./.env
 volumes:
   db_volume:
   client_volume:
