--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services:
       - ./config/initializers/contact_us.rb:/usr/src/app/config/initializers/contact_us.rb
       - ./config/initializers/devise.rb:/usr/src/app/config/initializers/devise.rb
       - ./config/initializers/recaptcha.rb:/usr/src/app/config/initializers/recaptcha.rb
-      - ./config/initializers/wicket_pdf.rb:/usr/src/app/config/initializers/wicket_pdf.rb
+      - ./config/initializers/wicked_pdf.rb:/usr/src/app/config/initializers/wicked_pdf.rb
+      - ./db/seeds.rb:/usr/src/app/db/seeds.rb
     ports:
       - "3000:3000"
     env_file:
