--- a/config/database.yml
+++ b/config/database.yml
@@ -1,12 +1,14 @@
-development:
-    adapter: postgresql
-    encoding: utf8
-    host: db
-    database: <%= ENV['POSTGRES_DB'] %>
-    username: <%= ENV['POSTGRES_USER'] %>
-    password: <%= ENV['POSTGRES_PASSWORD'] %>
-test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+defaults: &defaults
+  adapter: <%= ENV['DB_ADAPTER'] || 'postgresql' %>
+  encoding: <%= ENV['DB_ENCODING'] || 'utf8' %>
+  username: <%= ENV['POSTGRES_USER'] %>
+  password: <%= ENV['POSTGRES_PASSWORD'] %>
+  database: <%= ENV['POSTGRES_DB'] %>
   pool: 5
-  timeout: 5000
+
+development:
+  <<: *defaults
+  host: <%= ENV['DB_HOST'] %>
+#test:
+#  <<: *defaults
+#  host: db_test
